# job-manager-rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config
sql/: jobs_insert.sql  jobs_migration.sql
src/: lib.rs  prelude.rs
src/model/: job.rs
