cargo-features = ["edition2021"]

[package]
edition = "2021"
name = "job-manager"
version = "0.1.0"

authors = ["Thomas Villa <thomvil87@gmail.com>"]
description = "A postgresql-backed job queue"
documentation = "https://docs.rs/job-manager/"
homepage = "https://github.com/thomvil/job-manager-rs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/thomvil/job-manager-rs"

[lib]
name = "job_manager"
path = "src/lib.rs"

[[bin]]
name = "job_manager_bin"
path = "src/bin/bin.rs"

[dependencies]
chrono = "*"
dotenv = "*"
openssl = "0.10.34"
postgres = {version = "0.19", features = ["with-chrono-0_4"]}
postgres-openssl = "0.5.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = 'abort'
